# beef-interop

./: .gitignore  BeefSpace.toml  BeefSpace_User.toml  CMakeLists.txt  note.md
beef-interop-lib/: BeefProj.toml
beef-interop-lib/src/: Lib.bf
c_host/: CMakeLists.txt  main.cpp
c_lib/: CMakeLists.txt  lib.cpp  lib.h
dummy/: BeefProj.toml
dummy/src/: Program.bf
